--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,7 +2,6 @@ url=jdbc:postgresql://127.0.0.1:5432/parser
 username=postgres
 password=password
 driver-class-name=org.postgresql.Driver
-cron-time=0 0 12 * * ?
+cron-time=0 */1 * * * ?
 start-date=1 \u044F\u043D\u0432 20, 00:00
-address=https://www.sql.ru/forum/job-offers
 regular=(.*)(java)\\s*(?!script)(.*)
